--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1347,7 +1347,7 @@
 }
 
 .lh-table tr {
-  vertical-align: baseline;
+  vertical-align: middle;
 }
 
 /* Looks unnecessary, but mostly for keeping the <th>s left-aligned */
@@ -1374,7 +1374,6 @@
 .lh-table .lh-table-column--thumbnail {
   width: var(--image-preview-size);
   padding: 0;
-  position: relative;
 }
 
 .lh-table-column--url {
@@ -1411,9 +1410,6 @@
   width: var(--image-preview-size);
   height: var(--image-preview-size);
   display: block;
-  position: absolute;
-  top: 50%;
-  margin-top: calc(var(--image-preview-size) / -2);
 }
 
 .lh-unknown pre {
